--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
         <link rel="manifest" href="site.webmanifest">
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="css/vendor/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
 
-    <nav class="navbar navbar-inverse">
+    <nav id="top-navbar" class="navbar">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle"
+                <button type="button" id="top-navbar-button" class="navbar-toggle"
                         data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">WebSiteName</a>
+                <a id="app-name" class="navbar-brand" href="#">To-Do's</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown"
                            href="#">Page 1 <span class="caret"></span>
@@ -42,12 +42,17 @@
                     <li><a href="#">Page 3</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li><a href="#">
+                        <span class="glyphicon glyphicon-user"></span> Create Account</a>
+                    </li>
+                    <li>
+                        <a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+
 
     <div class="container">
 
@@ -59,16 +64,8 @@
 
 
 
-
-        <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-        <script>
-            window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-            ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-        </script>
-        <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+    <script src="js/vendor/jquery-3.2.1.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     </body>
 </html>
