--- a/index.html
+++ b/index.html
@@ -30,23 +30,40 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown"
-                           href="#">Page 1 <span class="caret"></span>
+                           href="#">Categories <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Page 1-1</a></li>
-                            <li><a href="#">Page 1-2</a></li>
-                            <li><a href="#">Page 1-3</a></li>
+                            <li><a href="#">Category 1</a></li>
+                            <li><a href="#">Category 2</a></li>
+                            <li><a href="#">Category 3</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Page 2</a></li>
-                    <li><a href="#">Page 3</a></li>
+
                 </ul>
+
+                <div id="top-navbar-search-field">
+                    <form class="navbar-form">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit">
+                                    <i class="glyphicon glyphicon-search"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">
-                        <span class="glyphicon glyphicon-user"></span> Create Account</a>
+                    <li>
+                        <a href="#">
+                        <span class="glyphicon glyphicon-user"></span> Create Account
+                        </a>
                     </li>
                     <li>
-                        <a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-log-in"></span> Login
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -54,11 +71,14 @@
     </nav>
 
 
-    <div class="container">
+
+        <div class="container-fluid">
+            <p>Some text. Hello, hello.</p>
+        </div>
 
         <!-- Add your site or application content here -->
 
-    </div>
+
 
 
 
