--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
 
         <title>To-Do's</title>
         <link rel="manifest" href="site.webmanifest">
+
+        <!-- Jasmine testing library -->
+        <link rel="shortcut icon" type="image/png"
+              href="jasmine/lib/jasmine-2.8.0/jasmine_favicon.png">
+        <link rel="stylesheet" type="text/css"
+              href="jasmine/lib/jasmine-2.8.0/jasmine.css">
+        <script type="text/javascript" src="jasmine/lib/jasmine-2.8.0/jasmine.js"></script>
+        <script type="text/javascript" src="jasmine/lib/jasmine-2.8.0/jasmine-html.js"></script>
+        <script type="text/javascript" src="jasmine/lib/jasmine-2.8.0/boot.js"></script>
+
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="css/vendor/bootstrap/css/bootstrap.min.css">
+        <!-- My own styles -->
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
