--- a/index.html
+++ b/index.html
@@ -9,14 +9,6 @@
         <title>To-Do's</title>
         <link rel="manifest" href="site.webmanifest">
 
-        <!-- Jasmine testing library -->
-        <link rel="shortcut icon" type="image/png"
-              href="jasmine/lib/jasmine-2.8.0/jasmine_favicon.png">
-        <link rel="stylesheet" type="text/css"
-              href="jasmine/lib/jasmine-2.8.0/jasmine.css">
-        <script type="text/javascript" src="jasmine/lib/jasmine-2.8.0/jasmine.js"></script>
-        <script type="text/javascript" src="jasmine/lib/jasmine-2.8.0/jasmine-html.js"></script>
-        <script type="text/javascript" src="jasmine/lib/jasmine-2.8.0/boot.js"></script>
 
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="css/vendor/bootstrap/css/bootstrap.min.css">
@@ -26,6 +18,7 @@
 
     <body>
 
+    <!-- Navigation Toolbar -->
     <nav id="top-navbar" class="navbar">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -44,7 +37,7 @@
                            href="#">Categories <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Category 1</a></li>
+                            <li><a href="#">Show All</a></li>
                             <li><a href="#">Category 2</a></li>
                             <li><a href="#">Category 3</a></li>
                         </ul>
@@ -52,15 +45,10 @@
 
                 </ul>
 
-                <div id="top-navbar-search-field">
+                <div id="top-navbar-search-container">
                     <form class="navbar-form">
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Search">
-                            <div class="input-group-btn">
-                                <button class="btn btn-default" type="submit">
-                                    <i class="glyphicon glyphicon-search"></i>
-                                </button>
-                            </div>
                         </div>
                     </form>
                 </div>
@@ -82,15 +70,21 @@
     </nav>
 
 
+    <!--  Main Body -->
+    <div id="todos-body" class="container-fluid">
+        <ul id="the-list">
+            <li>Order shoes
+                <span class="glyphicon glyphicon-remove-circle"></span>
+            </li>
+            <li>Order shoes
+                <span class="glyphicon glyphicon-remove-circle"></span>
+            </li>
+            <li>Order shoes
+                <span class="glyphicon glyphicon-remove-circle"></span>
+            </li>
 
-        <div class="container-fluid">
-            <p>Some text. Hello, hello.</p>
-        </div>
-
-        <!-- Add your site or application content here -->
-
-
-
+        </ul>
+    </div>
 
 
 
