--- a/index.html
+++ b/index.html
@@ -19,18 +19,12 @@
     <body>
 
     <!-- Navigation Toolbar -->
-    <nav id="top-navbar" class="navbar">
+    <nav id="top-navbar">
         <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" id="top-navbar-button" class="navbar-toggle"
-                        data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+            <div class="">
                 <a id="app-name" class="navbar-brand" href="#">To-Do's</a>
             </div>
-            <div class="collapse navbar-collapse" id="myNavbar">
+            <div class="" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown"
@@ -46,25 +40,23 @@
                 </ul>
 
                 <div id="top-navbar-search-container">
-                    <form class="navbar-form">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search">
-                        </div>
-                    </form>
+                    <input type="text" class="form-control"
+                           placeholder="Search">
                 </div>
-
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#">
-                        <span class="glyphicon glyphicon-user"></span> Create Account
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span class="glyphicon glyphicon-log-in"></span> Login
-                        </a>
-                    </li>
-                </ul>
+                <div id="login-and-create-account">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-user"></span> Create Account
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-log-in"></span> Login
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
