--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
 
             <li class="todo-list-item"><input type="checkbox" class="todo-checkbox">
                 Order shoes
-                <span class="glyphicon glyphicon-remove-circle invisible"></span>
+                <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
             </li>
 
             <li class="todo-list-item"><input type="checkbox" class="todo-checkbox">
-                Order shoes
-                <span class="glyphicon glyphicon-remove-circle invisible"></span>
+                buy milk
+                <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
             </li>
 
             <li class="todo-list-item"><input type="checkbox" class="todo-checkbox">
-                Order shoes
-                <span class="glyphicon glyphicon-remove-circle invisible"></span>
+                get meds
+                <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
             </li>
 
 
@@ -125,6 +125,6 @@
 <script src="js/vendor/jquery-3.2.1.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-<script src="jquery-event-configurations.js"></script>
+<script src="js/jquery-event-configurations.js"></script>
 </body>
 </html>
