more changes to jquery-event-configurations.js

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <title>To-Do's</title>
     <link rel="manifest" href="site.webmanifest">
 
-
-    <!-- Place favicon.ico in the root directory -->
     <link rel="stylesheet" href="css/vendor/bootstrap/css/bootstrap.min.css">
     <!-- My own styles -->
     <link rel="stylesheet" href="css/styles.css">
@@ -99,21 +97,26 @@
     <div id="todos-body" class="container-fluid">
         <ul class="todo-list">
 
-            <li class="todo-list-item"><input type="checkbox" class="todo-checkbox">
-                Order shoes
+            <li class="todo-list-item">
+                <input type="checkbox" class="todo-checkbox"
+                       title="Check box to perform action on item">
+                <span>Order shoes</span>
                 <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
             </li>
 
-            <li class="todo-list-item"><input type="checkbox" class="todo-checkbox">
-                buy milk
+            <li class="todo-list-item">
+                <input type="checkbox" class="todo-checkbox"
+                       title="Check box to perform action on item">
+                <span>Order shoes</span>
                 <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
             </li>
 
-            <li class="todo-list-item"><input type="checkbox" class="todo-checkbox">
-                get meds
+            <li class="todo-list-item">
+                <input type="checkbox" class="todo-checkbox"
+                       title="Check box to perform action on item">
+                <span>Order shoes</span>
                 <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
             </li>
-
 
         </ul>
     </div>
