changed more styles and jquery-event-configurations

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <li class="todo-list-item">
                 <input type="checkbox" class="todo-checkbox"
                        title="Check box to perform action on item">
-                <span class="highlighted-area" title="Drag item up or down to change order">
+                <span class="highlight-area" title="Drag item up or down to change order">
                     <span class="item-text">Order shoes</span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
                 </span>
@@ -107,7 +107,7 @@
             <li class="todo-list-item">
                 <input type="checkbox" class="todo-checkbox"
                        title="Check box to perform action on item">
-                <span class="highlighted-area" title="Drag item up or down to change order">
+                <span class="highlight-area" title="Drag item up or down to change order">
                     <span class="item-text">Order shoes</span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
                 </span>
@@ -116,7 +116,7 @@
             <li class="todo-list-item">
                 <input type="checkbox" class="todo-checkbox"
                        title="Check box to perform action on item">
-                <span class="highlighted-area" title="Drag item up or down to change order">
+                <span class="highlight-area" title="Drag item up or down to change order">
                     <span class="item-text">Order shoes</span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
                 </span>
