more changes to jquery-event-configurations.js

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                        title="Check box to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
                     <span class="item-text">Order shoes</span>
+                     <span class="glyphicon  glyphicon-pencil invisible"></span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
                 </span>
             </li>
@@ -109,6 +110,7 @@
                        title="Check box to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
                     <span class="item-text">Order shoes</span>
+                     <span class="glyphicon  glyphicon-pencil invisible"></span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
                 </span>
             </li>
@@ -118,6 +120,7 @@
                        title="Check box to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
                     <span class="item-text">Order shoes</span>
+                     <span class="glyphicon  glyphicon-pencil invisible"></span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
                 </span>
             </li>
