--- a/paragraph-edit.html
+++ b/paragraph-edit.html
@@ -9,7 +9,7 @@
 <p contenteditable="true">You can rewrite this line.</p>
 
 <ul>
-    <li contenteditable="true">rewrite this line</li>
+    <li contenteditable="true" onblur="alert('you changed something')">rewrite this line</li>
 </ul>
 </body>
 </html>
