created utilities.js file and made more changes to jquery-event-configurations.js

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 <script src="js/vendor/jquery-3.2.1.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+<script src="js/utilities.js"></script>
 <script src="js/jquery-event-configurations.js"></script>
 </body>
 </html>
