more changes to jquery-event-configurations.js

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <input type="checkbox" class="todo-checkbox"
                        title="Check box to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
-                    <span class="item-text">Order shoes</span>
+                    <span class="item-text">Order stuff</span>
                      <span class="glyphicon  glyphicon-pencil invisible"></span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
                 </span>
