small change to html, small change to event configurations

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                                    href="#">Lists <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a>Show All</a></li>
                                     <li><a>Groceries</a></li>
                                     <li><a>Places to visit in San Francisco</a></li>
                                 </ul>
@@ -100,7 +99,6 @@
                        title="Check box to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
                     <span class="item-text">Order shoes</span>
-                     <span class="glyphicon  glyphicon-pencil invisible"></span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
                 </span>
             </li>
@@ -110,7 +108,6 @@
                        title="Check box to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
                     <span class="item-text">Order shoes</span>
-                     <span class="glyphicon  glyphicon-pencil invisible"></span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
                 </span>
             </li>
@@ -119,8 +116,7 @@
                 <input type="checkbox" class="todo-checkbox"
                        title="Check box to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
-                    <span class="item-text">Order stuff</span>
-                     <span class="glyphicon  glyphicon-pencil invisible"></span>
+                    <span class="item-text">Order shoes</span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
                 </span>
             </li>
