create account page almost finished

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right">
                                     <li><a>Groceries</a></li>
-                                    <li><a>Places to visit in San Francisco</a></li>
                                 </ul>
                             </li>
 
@@ -64,14 +63,14 @@
 
 
             <div id="search-and-create-and-login" class="navbar-div">
-                <div class="navbar-div" id="top-navbar-search-container">
+                <div class="navbar-div top-navbar-search-container">
                     <input type="text" id="navbar-search-input" class="form-control"
                            placeholder="Search">
                 </div>
 
                 <div id="login-and-create-account" class="">
                     <div id="create-account">
-                        <a href="#">
+                        <a href="create-account.html">
                             <span class="glyphicon glyphicon-user"></span> Create Account
                         </a>
                     </div>
