create account and create login pages are finished.

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <meta name="description" content="To-Do List Application for productivity">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>To-Do's | Create Account</title>
+    <title>To-Do's | Log In</title>
     <link rel="manifest" href="site.webmanifest">
 
     <link rel="stylesheet" href="css/vendor/bootstrap/css/bootstrap.min.css">
@@ -25,8 +25,9 @@
 
             <div id="app-name-and-categories">
                 <div class="navbar-div" id="page-name-container">
-                    <a id="page-name" class="navbar-brand" href="#">Create Account</a>
+                    <a id="page-name" class="navbar-brand" href="#">Log In</a>
                 </div>
+
                 <div class="float-right" id="back-to-main">
                     <a href="index.html">
                         <span class="glyphicon glyphicon-arrow-left"></span> Back To Main</a>
@@ -46,15 +47,6 @@
                     <div class="navbar-div top-navbar-search-container">
                         <input type="password"  class="form-control"
                                placeholder="Password"
-                               required minlength="8" maxlength="16">
-                    </div>
-
-                </div>
-
-                <div class="navbar-div">
-                    <div class="navbar-div top-navbar-search-container">
-                        <input type="password"  class="form-control"
-                               placeholder="Password again"
                                required minlength="8" maxlength="16">
                     </div>
 
