--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
 
                     <div>
-                        <a href="#">
+                        <a href="login.html">
                             <span class="glyphicon glyphicon-log-in"></span> Login
                         </a>
                     </div>
@@ -95,7 +95,7 @@
 
             <li class="todo-list-item">
                 <input type="checkbox" class="todo-checkbox"
-                       title="Check box to perform action on item">
+                       title="Check box to mark item done, or to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
                     <span class="item-text">Order shoes</span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
@@ -104,7 +104,7 @@
 
             <li class="todo-list-item">
                 <input type="checkbox" class="todo-checkbox"
-                       title="Check box to perform action on item">
+                       title="Check box to mark item done, or to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
                     <span class="item-text">Order shoes</span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
@@ -113,7 +113,7 @@
 
             <li class="todo-list-item">
                 <input type="checkbox" class="todo-checkbox"
-                       title="Check box to perform action on item">
+                       title="Check box to mark item done, or to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
                     <span class="item-text">Order shoes</span>
                     <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
