--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                                    href="#">Actions <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a href="#">New List</a></li>
-                                    <li><a href="#">Edit Lists</a></li>
-                                    <li><a href="#">Delete Checked Items</a></li>
+                                    <li id="new-list-action"><a>New List</a></li>
+                                    <li><a>Edit Lists</a></li>
+                                    <li><a>Delete Checked Items</a></li>
                                 </ul>
                             </li>
 
@@ -91,9 +91,9 @@
 
     <!--  Main Body -->
     <div id="todos-body" class="container-fluid">
-        <ul class="todo-list">
+        <ul class="todo-list" id="the-todo-list">
 
-            <li class="todo-list-item">
+            <li class="todo-list-item" draggable="true">
                 <input type="checkbox" class="todo-checkbox"
                        title="Check box to mark item done, or to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
@@ -102,7 +102,7 @@
                 </span>
             </li>
 
-            <li class="todo-list-item">
+            <li class="todo-list-item" draggable="true">
                 <input type="checkbox" class="todo-checkbox"
                        title="Check box to mark item done, or to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
@@ -111,7 +111,7 @@
                 </span>
             </li>
 
-            <li class="todo-list-item">
+            <li class="todo-list-item" draggable="true">
                 <input type="checkbox" class="todo-checkbox"
                        title="Check box to mark item done, or to perform action on item">
                 <span class="highlight-area" title="Drag item up or down to change order">
@@ -121,6 +121,26 @@
             </li>
 
         </ul>
+
+
+        <form class="invisible-and-collapsed" id="new-list-form">
+            <div class="navbar-div">
+                <div class="navbar-div top-navbar-search-container">
+                    <input type="text"  class="form-control"
+                           placeholder="Username"
+                           required minlength="8" maxlength="16">
+                </div>
+
+            </div>
+
+            <div class="navbar-div">
+                <div class="navbar-div top-navbar-search-container form-submit">
+                    <input type="submit" value="Create">
+                </div>
+
+            </div>
+
+        </form>
     </div>
 
 
