adding new account functionality

--- a/create-account.html
+++ b/create-account.html
@@ -36,7 +36,7 @@
             <form>
                 <div class="navbar-div">
                     <div class="navbar-div top-navbar-search-container">
-                        <input type="text"  class="form-control"
+                        <input type="text"  class="form-control" id="create-account-username"
                                placeholder="Username"
                                required minlength="8" maxlength="16">
                     </div>
@@ -44,7 +44,7 @@
                 </div>
                 <div  class="navbar-div">
                     <div class="navbar-div top-navbar-search-container">
-                        <input type="password"  class="form-control"
+                        <input type="password"  class="form-control" id="create-account-password"
                                placeholder="Password"
                                required minlength="8" maxlength="16">
                     </div>
@@ -62,7 +62,7 @@
 
                 <div class="navbar-div">
                     <div class="navbar-div top-navbar-search-container form-submit">
-                        <input type="submit">
+                        <input type="submit" id="create-account-submit">
                     </div>
 
                 </div>
