--- a/index.html
+++ b/index.html
@@ -124,17 +124,15 @@
 
 
         <form class="invisible-and-collapsed" id="new-list-form">
-            <div class="navbar-div">
-                <div class="navbar-div top-navbar-search-container">
-                    <input type="text"  class="form-control"
-                           placeholder="Username"
-                           required minlength="8" maxlength="16">
-                </div>
 
+            <div class="navbar-div">
+                <input type="text"  class="form-control"
+                       placeholder="Name the List"
+                       required minlength="8" maxlength="16">
             </div>
 
             <div class="navbar-div">
-                <div class="navbar-div top-navbar-search-container form-submit">
+                <div class="navbar-div form-submit">
                     <input type="submit" value="Create">
                 </div>
 
