adding login functionality

--- a/create-account.html
+++ b/create-account.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
 
-            <form>
+            <form id="create-account-form">
                 <div class="navbar-div">
                     <div class="navbar-div top-navbar-search-container">
                         <input type="text"  class="form-control" id="create-account-username"
@@ -69,6 +69,10 @@
 
             </form>
 
+            <div id="account-creation-success" class="navbar-div invisible-and-collapsed" >
+               <p>Congratulations, you've created an account.</p>
+                <p>You may begin making lists (and checking them twice).</p>
+            </div>
 
         </div>
     </nav>
