--- a/index.html
+++ b/index.html
@@ -151,5 +151,6 @@
 <script src="js/initializeLocalStorage.js"></script>
 <script src="js/utilities.js"></script>
 <script src="js/jquery-event-configurations.js"></script>
+<script src="js/initial-appearance.js"></script>
 </body>
 </html>
