--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 
     <!-- Navigation Toolbar -->
-    <nav id="top-navbar">
-        <div class="container-fluid" id="top-container-in-navbar">
+    <nav class="top-navbar" id="main-home-navbar">
+        <div class="container-fluid top-container-in-navbar">
 
-            <div id="app-name-and-categories">
+            <div class="app-name-and-categories">
                 <div class="navbar-div" id="app-name-container">
                     <a id="app-name" class="navbar-brand" href="#">To-Do's</a>
                 </div>
@@ -76,7 +76,7 @@
                     </div>
 
                     <div>
-                        <a href="login.html">
+                        <a id="login-link">
                             <span class="glyphicon glyphicon-log-in"></span> Login
                         </a>
                     </div>
@@ -142,6 +142,50 @@
     </div>
 
 
+    <nav class="top-navbar" id="login-section">
+        <div class="container-fluid top-container-in-navbar">
+
+            <div class="app-name-and-categories">
+                <div class="navbar-div" id="page-name-container">
+                    <a id="page-name" class="navbar-brand" href="#">Log In</a>
+                </div>
+
+
+            </div>
+
+            <form>
+                <div class="navbar-div">
+                    <div class="navbar-div top-navbar-search-container">
+                        <input type="text"  class="form-control" id="login-username"
+                               placeholder="Username"
+                               required minlength="8" maxlength="16">
+                    </div>
+
+                </div>
+                <div  class="navbar-div">
+                    <div class="navbar-div top-navbar-search-container">
+                        <input type="password"  class="form-control" id="login-password"
+                               placeholder="Password"
+                               required minlength="8" maxlength="16">
+                    </div>
+
+                </div>
+
+                <div class="navbar-div">
+                    <div class="navbar-div top-navbar-search-container form-submit">
+                        <input type="submit" id="login-submit">
+                    </div>
+
+                </div>
+
+            </form>
+
+
+        </div>
+    </nav>
+
+
+
 </div>
 
 
@@ -151,6 +195,6 @@
 <script src="js/initializeLocalStorage.js"></script>
 <script src="js/utilities.js"></script>
 <script src="js/jquery-event-configurations.js"></script>
-<script src="js/initial-appearance.js"></script>
+<script src="js/set-appearance.js"></script>
 </body>
 </html>
