in process of creating ability to save changes to a list in local storage

--- a/create-account.html
+++ b/create-account.html
@@ -20,10 +20,10 @@
 
 
     <!-- Navigation Toolbar -->
-    <nav id="top-navbar">
-        <div class="container-fluid" id="top-container-in-navbar">
+    <nav class="top-navbar">
+        <div class="container-fluid top-container-in-navbar">
 
-            <div id="app-name-and-categories">
+            <div class="app-name-and-categories">
                 <div class="navbar-div" id="page-name-container">
                     <a id="page-name" class="navbar-brand" href="#">Create Account</a>
                 </div>
