--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                    href="#">Lists <span class="caret"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a>Groceries</a></li>
+                                    <li><a class="list-menu-item">Groceries</a></li>
                                 </ul>
                             </li>
 
