--- a/index.html
+++ b/index.html
@@ -101,34 +101,9 @@
     <div id="todos-body" class="container-fluid">
         <ul class="todo-list" id="the-todo-list">
 
-            <li class="todo-list-item" draggable="true">
-                <input type="checkbox" class="todo-checkbox"
-                       title="Check box to mark item done, or to perform action on item">
-                <span class="highlight-area" >
-                    <span class="item-text">Order shoes</span>
-                    <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
-                </span>
-            </li>
-
-            <li class="todo-list-item" draggable="true">
-                <input type="checkbox" class="todo-checkbox"
-                       title="Check box to mark item done, or to perform action on item">
-                <span class="highlight-area" >
-                    <span class="item-text">Order shoes</span>
-                    <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
-                </span>
-            </li>
-
-            <li class="todo-list-item" draggable="true">
-                <input type="checkbox" class="todo-checkbox"
-                       title="Check box to mark item done, or to perform action on item">
-                <span class="highlight-area" >
-                    <span class="item-text">Order shoes</span>
-                    <span class="glyphicon  glyphicon-remove-circle  invisible"></span>
-                </span>
-            </li>
-
         </ul>
+
+        <button id="add-button">Add Item</button>
 
 
         <form class="invisible-and-collapsed" id="new-list-form">
