--- a/index.html
+++ b/index.html
@@ -103,7 +103,15 @@
 
         </ul>
 
-        <button id="add-button">Add Item</button>
+        <div class="navbar-div">
+            <div class="navbar-div top-navbar-search-container">
+                <input type="text"  class="form-control" id="create-account-username"
+                       placeholder="Add item"
+                       required minlength="8" maxlength="16">
+            </div>
+            <button id="add-button">Add Item</button>
+        </div>
+
 
 
         <form class="invisible-and-collapsed" id="new-list-form">
