more cosmetic changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="app-name-and-categories">
                 <div class="navbar-div app-name-container" id="app-name-holder">
-                    <a id="app-name" class="navbar-brand" href="#">To-Do's</a>
+                    <header id="app-name" class="navbar-brand" href="#">To-Do's</header>
                 </div>
 
                 <div class="navbar-div" id="dropdown-menus">
