--- a/create-account.html
+++ b/create-account.html
@@ -25,7 +25,7 @@
 
             <div class="app-name-and-categories">
                 <div class="navbar-div" id="page-name-container">
-                    <a id="page-name" class="navbar-brand" href="#">Create Account</a>
+                    <header id="page-name" class="navbar-brand">Create Account</header>
                 </div>
                 <div class="float-right" id="back-to-main">
                     <a href="index.html">
