Adding data retrieval functions for session and local storage

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
             <div class="app-name-and-categories">
                 <div class="navbar-div" id="page-name-container">
-                    <a id="page-name" class="navbar-brand" href="#">Log In</a>
+                    <header id="page-name" class="navbar-brand">Log In</header>
                 </div>
                 <div class="float-right" id="back-to-main">
                     <a href="index.html">
@@ -192,9 +192,9 @@
 <script src="js/vendor/jquery-3.2.1.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+<script src="js/my_js_library/browser_storage.js"></script>
 <script src="js/utilities.js"></script>
 <script src="js/initializeLocalStorage.js"></script>
 <script src="js/jquery-event-configurations.js"></script>
-<script src="js/my_js_library/browser_storage.js"></script>
 </body>
 </html>
