--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <header id="app-name" class="navbar-brand" href="#">To-Do's</header>
                 </div>
 
-                <div class="navbar-div" id="dropdown-menus">
+                <div class="navbar-div  invisible-when-logged-out"
+                     id="dropdown-menus">
                     <div class="float-right">
                         <ul class="nav">
                             <li class="dropdown">
@@ -63,13 +64,13 @@
 
 
             <div id="search-and-create-and-login" class="navbar-div">
-                <div class="navbar-div top-navbar-search-container"
+                <div class="navbar-div top-navbar-search-container  remove-when-logged-out"
                      id="navbar-search-container">
                     <input type="text" id="navbar-search-input" class="form-control"
                            placeholder="Search">
                 </div>
 
-                <div id="login-and-create-account">
+                <div id="login-and-create-account" class="remove-when-logged-in">
                     <div id="create-account">
                         <a href="create-account.html">
                             <span class="glyphicon glyphicon-user"></span> Create Account
@@ -83,7 +84,8 @@
                     </div>
                 </div>
 
-                <div id="logout-link-container" class="invisible-and-collapsed">
+                <div id="logout-link-container"
+                     class="invisible-and-collapsed  remove-when-logged-out">
                     <div>
                         <a id="logout-link">
                             <span class="glyphicon glyphicon-log-out"></span> Logout
@@ -103,7 +105,7 @@
         <ul class="todo-list" id="the-todo-list">
 
         </ul>
-        <form id="new-list-item-form">
+        <form id="new-list-item-form" class="remove-when-logged-out">
             <div class="navbar-div">
                 <div class="navbar-div top-navbar-search-container">
                     <input type="text"  class="form-control"
@@ -192,7 +194,9 @@
 <script src="js/vendor/jquery-3.2.1.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/vendor/modernizr-3.5.0.min.js"></script>
+<script src="js/my_js_library/essentials.js"></script>
 <script src="js/my_js_library/browser_storage.js"></script>
+<script src="js/validation.js"></script>
 <script src="js/utilities.js"></script>
 <script src="js/initializeLocalStorage.js"></script>
 <script src="js/jquery-event-configurations.js"></script>
