--- a/create-account.html
+++ b/create-account.html
@@ -44,7 +44,8 @@
                 </div>
                 <div  class="navbar-div">
                     <div class="navbar-div top-navbar-search-container">
-                        <input type="password"  class="form-control" id="create-account-password"
+                        <input type="password"  class="form-control"
+                               id="create-account-password"
                                placeholder="Password"
                                required minlength="8" maxlength="16">
                     </div>
@@ -53,8 +54,8 @@
 
                 <div class="navbar-div">
                     <div class="navbar-div top-navbar-search-container">
-                        <input type="password"  class="form-control" id="create-account-password-2"
-                               placeholder="Password again"
+                        <input type="password"  class="form-control"
+                               id="create-account-password-2" placeholder="Password again"
                                required minlength="8" maxlength="16">
                     </div>
 
@@ -69,7 +70,8 @@
 
             </form>
 
-            <div id="account-creation-unsuccessful" class="navbar-div invisible-and-collapsed" >
+            <div id="account-creation-unsuccessful"
+                 class="navbar-div invisible-and-collapsed" >
                <p>Sorry, your info didn't meet requirements.</p>
                 <p>Usernames and passwords must be at least 8 characters and not more than 16.  Both passwords must match.</p>
             </div>
