separated code into model-view-controller architecture

--- a/create-account.html
+++ b/create-account.html
@@ -92,6 +92,6 @@
 <script src="js/validation.js"></script>
 <script src="js/utilities.js"></script>
 <script src="js/initializeLocalStorage.js"></script>
-<script src="js/jquery-event-configurations.js"></script>
+<script src="js/todos-controller.js"></script>
 </body>
 </html>
