--- a/login.html
+++ b/login.html
@@ -31,6 +31,6 @@
 <script src="js/vendor/modernizr-3.5.0.min.js"></script>
 <script src="js/initializeLocalStorage.js"></script>
 <script src="js/utilities.js"></script>
-<script src="js/jquery-event-configurations.js"></script>
+<script src="js/todos-controller.js"></script>
 </body>
 </html>
