--- a/index.html
+++ b/index.html
@@ -199,6 +199,6 @@
 <script src="js/validation.js"></script>
 <script src="js/utilities.js"></script>
 <script src="js/initializeLocalStorage.js"></script>
-<script src="js/jquery-event-configurations.js"></script>
+<script src="js/todos-controller.js"></script>
 </body>
 </html>
